@@ -15,7 +15,9 @@
     "DB->get_h_nelem()", "DB->get_lorder()", "DB->get_pagesize()",
     "DB->get_re_pad()", "DB->get_re_len()", "DB->get_re_delim()",
     "DB->get_flags()", "DB->get_bt_minkey()",
-    "DB->set_priority()", "DB->get_priority()", functions.
+    "DB->set_priority()", "DB->get_priority()",
+    "DB->set_q_extentsize()", "DB->get_q_extentsize()",
+    functions.
 
 4.8.1:
   * Support for "DB_ENV->mutex_set_align()" and
